# rustree

./: .gitignore  Cargo.toml  README.md  convex_hulls.json  index.html  rustree-gui-136e699e490e63758ced9128b6ffc35f69519684f725b2234734eafa2ad46f3306926807138445f5707929b412bf609a.js  rustree-gui-136e699e490e63758ced9128b6ffc35f69519684f725b2234734eafa2ad46f3306926807138445f5707929b412bf609a_bg.wasm
.github/workflows/: rust-wasm-deploy.yml  rust-wasm.yml
examples/: points.rs
gui/: Cargo.toml  index.html
gui/src/: app.rs  data.rs  lib.rs  main.rs
src/: bounding_box.rs  lib.rs  main.rs  point.rs  r_tree.rs
src/r_tree/: walk.rs
