[package]
name = "rustree-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
rand = "0.8.5"
rustree = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
