[package]
name = "rustree-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }
rustree = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.89"
